# frux-app-server

./: .bumpversion.cfg  .coveragerc  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bandit.yaml  c15fb0ef6098_hashtag_association_to_class.py  heroku-Dockerfile  heroku.yml  mypy.ini  noxfile.py  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: bandit.yml  linters.yml  tests.yml
docker-compose/: api-entrypoint.sh  docker-compose.yaml  wait-for-postgres.sh
features/: categories.feature  environment.py  favorites.feature  hashtags.feature  payments.feature  projects.feature  reviews.feature  stages.feature  stats.feature  users.feature
features/steps/: categories.py  commons.py  favorites.py  hashtags.py  payments.py  project.py  projects.py  reviews.py  stages.py  stats.py  users.py
frux_app_server/: api.py  app.py  cfg.py  constants.py  manage.py  models.py  schema.py  setting.ini  settings_sample.ini  templates.py  utils.py
frux_app_server/graphql/: mutation.py  object.py  query.py
frux_app_server/graphqlschema/: constants.py  filters.py  mutation.py  object.py  query.py  utils.py  validations.py
frux_app_server/graphqlschema/objects/: admin.py  favorite.py  hashtag.py  investment.py  project.py  review.py  (+2 more)
frux_app_server/migrations/: alembic.ini  env.py
frux_app_server/namespaces/: __init__.py
frux_app_server/services/: chat_client.py  datadog_client.py  logger.py  smart_contract_client.py
heroku/: heroku-entrypoint.sh
heroku/datadog-config/: datadog.yaml
tests/: test_api.py
(+50 files in other folders)
